Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-14924

A user may crash the server by sending invalid snapshot_marker packet

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 3.1.0, 4.0.0
    • 3.0, 3.0.1, 3.0.2, 3.0.3, 4.0.0
    • memcached
    • Security Level: Public
    • Untriaged
    • Unknown

    Description

      http://review.couchbase.org/#/c/36433/5 use abort() in a package validator causing the server to crash if someone sends an invalid packet (which is what the validators is supposed to protect us against )

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              trond Trond Norbye
              trond Trond Norbye
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty