MB-14924: Do NOT abort for incorrect packet

Change-Id: I9acd288f5720c6c8eb20d6c649cb975c4eaf6e0b
Reviewed-on: http://review.couchbase.org/50891
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>